[package]
name = "square_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
byteorder = { version = "*", default-features = false }
federated_compute = { path = "../../third_party/federated_compute" }
micro_rpc = { workspace = true }
oak_attestation = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
pipeline_transforms = { path = "../../pipeline_transforms" }
prost = { version = "*", default-features = false }
prost-types = { version = "*", default-features = false }

[dev-dependencies]
anyhow = { version = "*", default-features = false }
cfc_crypto = { path = "../../cfc_crypto" }
coset = { version = "*", default-features = false }
oak_restricted_kernel_sdk = { workspace = true, features = ["mock_attestation"] }
pipeline_transforms = { path = "../../pipeline_transforms", features = ["test"] }
sha2 = { version = "*", default-features = false }
