cargo-features = ["per-package-target"]

[package]
name = "sum_enclave_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
forced-target = "x86_64-unknown-none"

[dependencies]
log = "*"
oak_channel = { workspace = true }
oak_core = { workspace = true }
oak_enclave_runtime_support = { workspace = true }
oak_restricted_kernel_interface = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
pipeline_transforms = { path = "../../pipeline_transforms" }
sum_service = { path = "../sum_service" }

[[bin]]
name = "sum_enclave_app"
test = false
bench = false
