[package]
name = "explain_fcp_attestation_record"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
federated_compute = { path = "../../third_party/federated_compute" }
oak_attestation_verification = { workspace = true }
oak_attestation_explain = { workspace = true }
oak_proto_rust = { workspace = true }
clap = { version = "*", features = ["color", "error-context", "help", "std", "derive", "suggestions", "usage"] }
prost = "*"
anyhow = "*"

[dev-dependencies]
assert_cmd = "*"
insta = "*"
tempfile = "*"
